--- a/finshield/src/main/resources/application.yml
+++ b/finshield/src/main/resources/application.yml
@@ -18,3 +18,9 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
+
+springdoc:
+  swagger-ui:
+    path: /swagger
+  api-docs:
+    path: /api-docs
