--- a/finshield/src/main/resources/application.yml
+++ b/finshield/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
         format_sql: true
   flyway:
     enabled: true
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
 
 logging:
   level:
@@ -24,3 +28,4 @@ springdoc:
     path: /swagger
   api-docs:
     path: /api-docs
+
