--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
         run: docker version
 
       - name: Run tests
+        working-directory: finshield/finshield
         run: mvn -B test
 
-      - name: Build jar (optional but recommended)
+      - name: Build jar
+        working-directory: finshield/finshield
         run: mvn -B -DskipTests package
