--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker version
 
       - name: Run tests
-        run: mvn -B test
+        run: mvn -B -e test
 
       - name: Build jar
         run: mvn -B -DskipTests package
