--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker version
 
       - name: Run tests
-        run: mvn -B -e test
+        run: mvn -B -e verify
 
       - name: Upload JaCoCo HTML report
         uses: actions/upload-artifact@v4
