feat: add kafka producer and consumer for transaction-created events
refactor: process fraud scoring asynchronously via kafka

test: run integration tests with postgres redis kafka containers

--- a/finshield/src/main/resources/application.yml
+++ b/finshield/src/main/resources/application.yml
@@ -18,6 +18,23 @@ spring:
     redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: finshield-fraud
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "com.finshield.*"
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+finshield:
+  kafka:
+    topic:
+      txn-created: txn.created.v1s
 
 logging:
   level:
